_sass/utilities/_flex.scss
// Utilities: Flex
// ============================================================================

.u-flexbox {
    display: flex;

    &:not(.u-flex-column) {
        flex-direction: row;
    }
}

.u-mobile-flexbox {
    display: flex;
    flex-direction: column;

    @include media-query(550px) {
        flex-direction: row;
    }
}

.u-flex-column {
    flex-direction: column;
}

.u-flex-wrap {
    flex-wrap: wrap;
}


// Flex Layout
// ---

.u-align-middle {
    align-items: center;
}

.u-justify-start {
    justify-content: flex-start;
}

.u-justify-end {
    justify-content: flex-end;
}

.u-justify-middle {
    justify-content: center;
}


// Flexbox Children
// ---

.u-flex {
    display: block;
    flex: 1;
}

.u-flex-expand {
    display: block;
    flex: 1;
    flex-basis: auto;
}

.u-flex-shrink {
    display: block;
    flex: 0 1 auto;
}

